Created header and footer partials, added stylesheet.

--- a/IntroToExpress/MoreExpress/EJSDemo/views/index.ejs
+++ b/IntroToExpress/MoreExpress/EJSDemo/views/index.ejs
@@ -1,3 +1,7 @@
+<% include partials/header %>
+
 <h1>Welcome to the home page!</h1>
 
 <img src="https://i.imgur.com/pf6YelG.jpg">
+
+<% include partials/footer %>
