--- a/APIs/movie_search_app/views/results.ejs
+++ b/APIs/movie_search_app/views/results.ejs
@@ -1,5 +1,11 @@
 <h1>Results Page</h1>
 
 <% data["Search"].forEach(function(movie) { %>
-  <li><%= movie["Title"] %></li>
+  <ul>
+    <li>
+     <strong><%= movie["Title"] %></strong>  - <%= movie["Year"]%>
+    </li>
+  </ul>
 <% }); %>
+
+<a href="/">Search Again</a>
