--- a/YelpCamp/views/campgrounds.ejs
+++ b/YelpCamp/views/campgrounds.ejs
@@ -1,6 +1,11 @@
 <h1>Campgrounds Page</h1>
 
-<%= campgrounds %>
-
+<% campgrounds.forEach(function(campground) { %>
+  <ul>
+    <li>
+     <%= campground.name %>
+    </li>
+  </ul>
+<% }); %>
 
 <p><a href="/">Back to the main page</a></p>
