--- a/YelpCamp/views/campgrounds.ejs
+++ b/YelpCamp/views/campgrounds.ejs
@@ -1,11 +1,12 @@
 <h1>Campgrounds Page</h1>
 
 <% campgrounds.forEach(function(campground) { %>
-  <ul>
-    <li>
+  <div>
+    <h4>
      <%= campground.name %>
-    </li>
-  </ul>
+    </h4>
+    <img src="<%= campground.image %>">
+  </div>
 <% }); %>
 
 <p><a href="/">Back to the main page</a></p>
