Added header and footer partials, Bootstrap.

--- a/YelpCamp/views/landing.ejs
+++ b/YelpCamp/views/landing.ejs
@@ -1,5 +1,9 @@
+<% include partials/header %>
+
 <h1>Landing Page for YelpCamp</h1>
 
 <p>Welcome to YelpCamp</p>
 
 <p><a href="/campgrounds">View all the campgrounds</a></p>
+
+<% include partials/footer %>
