--- a/YelpCamp/views/campgrounds.ejs
+++ b/YelpCamp/views/campgrounds.ejs
@@ -1,3 +1,5 @@
+<% include partials/header %>
+
 <h1>Campgrounds Page</h1>
 
 <% campgrounds.forEach(function(campground) { %>
@@ -9,4 +11,4 @@
   </div>
 <% }); %>
 
-<p><a href="/">Back to the main page</a></p>
+<% include partials/footer %>
