--- a/YelpCamp/views/campgrounds.ejs
+++ b/YelpCamp/views/campgrounds.ejs
@@ -1,6 +1,7 @@
 <% include partials/header %>
 
 <h1>Campgrounds Page</h1>
+<a href="/campgrounds/new">Add new campground.</a>
 
 <% campgrounds.forEach(function(campground) { %>
   <div>
