--- a/YelpCamp/views/campgrounds.ejs
+++ b/YelpCamp/views/campgrounds.ejs
@@ -6,7 +6,7 @@
       <h1>Welcome to YelpCamp!</h1>
       <p>View our hand-picked campgrounds from all over the world.</p>
     
-      <p class="btn btn-lg btn-default"><a href="/campgrounds/new">Add new campground.</a></p>
+      <p class="btn btn-lg btn-primary"><a href="/campgrounds/new" style="color:white;">Add new campground</a></p>
     </div>
   </header>
 
