--- a/YelpCamp/views/new.ejs
+++ b/YelpCamp/views/new.ejs
@@ -1,13 +1,24 @@
 <% include partials/header %>
 
-<h1>Create a New Campground</h1>
-
-<form action="/campgrounds" method="POST">
-  <input type="text" placeholder="campground name" name="name">
-  <input type="text" placeholder="image url" name="image">
-  <button>Submit</button>
-</form>
-
-<a href="/campgrounds">Back to All Campgrounds</a>
+<div class="container">
+  <div class="row">
+    <h1 style="text-align: center; ">Create a New Campground</h1>
+    <div style="width: 40%; margin: 25px auto;">
+      <form action="/campgrounds" method="POST">
+        <div class="form-group">
+          <input class="form-control" type="text" placeholder="campground name" name="name">
+        </div>
+        <div class="form-group">
+          <input class="form-control" type="text" placeholder="image url" name="image">
+        </div>
+        <div class="form-group">
+        <button class="btn btn-lg btn-primary btn-block">Submit</button>
+        </div>
+      </form>
+      
+      <a href="/campgrounds">Back to All Campgrounds</a>
+    </div>
+  </div>
+</div>
 
 <% include partials/footer %>
