--- a/RESTfulRouting/RESTfulBlogApp/views/index.ejs
+++ b/RESTfulRouting/RESTfulBlogApp/views/index.ejs
@@ -1,3 +1,5 @@
+<% include partials/header.ejs %>
+
 <h1>Index Page</h1>
 
 <% blogs.forEach(function(blog) { %>
@@ -10,3 +12,5 @@
     </h2>
   </div>
 <% }); %>
+
+<% include partials/footer.ejs %>
