--- a/RESTfulRouting/RESTfulBlogApp/views/partials/header.ejs
+++ b/RESTfulRouting/RESTfulBlogApp/views/partials/header.ejs
@@ -3,7 +3,7 @@
   <head>
     <title>Blog App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.2/semantic.min.css" type="text/css">
-    <link rel="stylesheet" href="stylesheets/app.css" type="text/css">
+    <link rel="stylesheet" href="/stylesheets/app.css" type="text/css">
   </head>
   <body>
     
