--- a/RESTfulRouting/RESTfulBlogApp/views/partials/header.ejs
+++ b/RESTfulRouting/RESTfulBlogApp/views/partials/header.ejs
@@ -9,7 +9,7 @@
     
     <div class="ui fixed inverted menu">
       <div class="ui container">
-        <div class="header item"><i class="terminal icon"></i>Blog Site</div>
+        <div class="header item"><a href="/"><i class="terminal icon"></i>Blog Site</a></div>
           <a href="/" class="item">Home</a>
           <a href="/blogs/new" class="item">New Post</a>
       </div>
