--- a/APIs/movie_search_app/views/results.ejs
+++ b/APIs/movie_search_app/views/results.ejs
@@ -4,7 +4,8 @@
   <ul>
     <li>
      <strong><%= movie["Title"] %></strong>  - <%= movie["Year"]%>
-    </li>
+   </li>
+    <p><img src="<%= movie["Poster"]%>"</p>
   </ul>
 <% }); %>
 
