Moved campground code to a module file.

--- a/YelpCamp/views/show.ejs
+++ b/YelpCamp/views/show.ejs
@@ -4,9 +4,9 @@
   <%= campground.name %>
 </h1>
 
-<p>
-  <img src="<%= campground.image %>">
-</p>
+<picture>
+  <img class ="img-thumbnail" src="<%= campground.image %>">
+</picture>
 
 <p>
   <%= campground.description %>
