--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <div class="container">
 
@@ -14,12 +14,15 @@
     <%= campground.description %>
   </p>
   
+  <p>
+    <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add New Comment</a>
+  </p>
   <% campground.comments.forEach(function(comment) { %>
     <p>
-      <strong><%= comment.author %></strong>: <%= comment.text %>
+      <strong><%= comment.author %>:</strong> <%= comment.text %>
     </p>
   <% }) %>
 
 </div>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
