--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -1,28 +1,49 @@
 <% include ../partials/header %>
 
 <div class="container">
+  <div class="row">
+    <div class="col-md-3 col-sm-3">
+      <p class="lead"><a href="/campgrounds">Yelp Camp</a></p>
+      <div class="list-group">
+        <li class="list-group-item active">Info 1</li>
+        <li class="list-group-item">Info 2</li>
+        <li class="list-group-item">Info 3</li>
+      </div>
+      MAP TK
+    </div>
+    <div class="col-md-9 col-sm-9">
+      <div class="thumbnail">
+        <img class ="img-fluid" src="<%= campground.image %>">
+        <div class="caption">
+          <h4 class="pull-right">$9.00/night</h4>
+          <h4><a><%= campground.name %></a></h4>
+          <p><%= campground.description %></p>
+        </div>
+      </div>
+      <div class="well">
+        <div class="text-right">
+          <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add New Comment</a>
+        </div>
+        <hr>
 
-  <h1>
-    <%= campground.name %>
-  </h1>
-  
-  <picture>
-    <img class ="img-thumbnail" src="<%= campground.image %>">
-  </picture>
-  
-  <p>
-    <%= campground.description %>
-  </p>
-  
-  <p>
-    <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add New Comment</a>
-  </p>
-  <% campground.comments.forEach(function(comment) { %>
-    <p>
-      <strong><%= comment.author %>:</strong> <%= comment.text %>
-    </p>
-  <% }) %>
+        <% campground.comments.forEach(function(comment) { %>
+          <div class="row">
+            <div class="col-md-12">
+                <strong><%= comment.author %></strong>
+                <span class="pull-right">10 days ago</span>
+                <p></strong> <%= comment.text %></p>
+            </div>
+          </div>
+        <% }) %>
+          
 
+
+      </div>
+    </div>
+  </div>
 </div>
+
+  
+
 
 <% include ../partials/footer %>
