Added logout and redirects

--- a/Authentication/AuthDemo/views/secret.ejs
+++ b/Authentication/AuthDemo/views/secret.ejs
@@ -3,3 +3,7 @@
 <p>Found me!</p>
 
 <img src="https://media.golfdigest.com/photos/5ac259d2b312500b48a85018/master/pass/waldo2.jpg">
+
+<ul>
+  <li><a href="/logout">Logout</a></li>
+</ul>
