--- a/Authentication/AuthDemo/views/home.ejs
+++ b/Authentication/AuthDemo/views/home.ejs
@@ -4,4 +4,5 @@
   <li><a href="/login">Login</a></li>
   <li><a href="/register">Register</a></li>
   <li><a href="/secret">Secret</a></li>
+  <li><a href="/logout">Logout</a></li>
 </ul>
