--- a/Authentication/AuthDemo/views/register.ejs
+++ b/Authentication/AuthDemo/views/register.ejs
@@ -5,3 +5,9 @@
   <input type="passowrd" name="password" placeholder="password">
   <button>Submit</button>
 </form>
+
+<ul>
+  <li><a href="/login">Login</a></li>
+  <li><a href="/secret">Secret</a></li>
+  <li><a href="/logout">Logout</a></li>
+</ul>
