--- a/Authentication/AuthDemo/views/register.ejs
+++ b/Authentication/AuthDemo/views/register.ejs
@@ -2,7 +2,7 @@
 
 <form action="/register" method="POST">
   <input type="text" name="username" placeholder="username">
-  <input type="passowrd" name="password" placeholder="password">
+  <input type="password" name="password" placeholder="password">
   <button>Submit</button>
 </form>
 
