--- a/YelpCamp/views/partials/header.ejs
+++ b/YelpCamp/views/partials/header.ejs
@@ -18,7 +18,7 @@
             <a href="/">Login</a>
           </li>
           <li>
-            <a href="/">Register</a>
+            <a href="/register">Register</a>
           </li>
           <li>
             <a href="/">Logout</a>
