--- a/YelpCamp/views/partials/header.ejs
+++ b/YelpCamp/views/partials/header.ejs
@@ -15,13 +15,13 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a href="/">Login</a>
+            <a href="/login">Login</a>
           </li>
           <li>
             <a href="/register">Register</a>
           </li>
           <li>
-            <a href="/">Logout</a>
+            <a href="/logout">Logout</a>
           </li>
         </ul>
       </div>
