--- a/YelpCamp/views/partials/header.ejs
+++ b/YelpCamp/views/partials/header.ejs
@@ -14,15 +14,14 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li>
-            <a href="/login">Login</a>
-          </li>
-          <li>
-            <a href="/register">Register</a>
-          </li>
-          <li>
-            <a href="/logout">Logout</a>
-          </li>
+          <!--if not logged in (if !user), show-->
+          <% if(!currentUser) { %>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Register</a></li>
+          <!--else-->
+         <% } else { %>
+            <li><a href="#">Signed in as <%= currentUser.username %></a></li>
+            <li><a href="/logout">Logout</a></li> <% } %>
         </ul>
       </div>
     </div>
