--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -17,6 +17,9 @@
         <div class="caption">
           <h4 class="pull-right">$9.00/night</h4>
           <h4><a><%= campground.name %></a></h4>
+          <p>
+            <em>Submitted by <%= campground.author.username %></em>
+          </p>
           <p><%= campground.description %></p>
         </div>
       </div>
