--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -22,6 +22,10 @@
           </p>
           <p><%= campground.description %></p>
           <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+          
+          <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+            <button class="btn btn-danger">Delete</button>
+          </form>
         </div>
       </div>
       <div class="well">
