--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -21,10 +21,10 @@
             <em>Submitted by <%= campground.author.username %></em>
           </p>
           <p><%= campground.description %></p>
-          <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+          <a class="btn btn-warning btn-xs" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
           
-          <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-            <button class="btn btn-danger">Delete</button>
+          <form class="disp" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+            <button class="btn btn-danger btn-xs">Delete</button>
           </form>
         </div>
       </div>
