--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -21,11 +21,14 @@
             <em>Submitted by <%= campground.author.username %></em>
           </p>
           <p><%= campground.description %></p>
-          <a class="btn btn-warning btn-xs" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
           
-          <form class="disp" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-            <button class="btn btn-danger btn-xs">Delete</button>
-          </form>
+          <% if(currentUser && campground.author.id.equals(currentUser._id)) { %>
+            <a class="btn btn-warning btn-xs" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+            
+            <form class="disp" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+              <button class="btn btn-danger btn-xs">Delete</button>
+            </form>
+          <% } %>
         </div>
       </div>
       <div class="well">
