--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -42,7 +42,11 @@
             <div class="col-md-12">
                 <strong><%= comment.author.username %></strong>
                 <span class="pull-right">10 days ago</span>
-                <p></strong> <%= comment.text %></p>
+                <p>
+                  <%= comment.text %>
+                  <a class="disp btn btn-xs btn-warning pull-right" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
+
+                </p>
             </div>
           </div>
         <% }) %>
