--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -44,9 +44,11 @@
                 <span class="pull-right">10 days ago</span>
                 <p>
                   <%= comment.text %>
-                  <a class="disp btn btn-xs btn-warning pull-right" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
-
                 </p>
+               <a class="disp btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
+              <form class="disp" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
+                  <input type="submit" class="btn btn-xs btn-danger" value="Delete">
+              </form>
             </div>
           </div>
         <% }) %>
