--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -40,15 +40,19 @@
         <% campground.comments.forEach(function(comment) { %>
           <div class="row">
             <div class="col-md-12">
-                <strong><%= comment.author.username %></strong>
-                <span class="pull-right">10 days ago</span>
-                <p>
-                  <%= comment.text %>
-                </p>
-               <a class="disp btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
-              <form class="disp" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
-                  <input type="submit" class="btn btn-xs btn-danger" value="Delete">
-              </form>
+              <strong><%= comment.author.username %></strong>
+              <span class="pull-right">10 days ago</span>
+              <p><%= comment.text %></p>
+              
+              <% if(currentUser && comment.author.id.equals(currentUser._id)) { %>
+                <a class="disp btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
+                
+                <form class="disp" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
+                  <!--<input type="submit" class="btn btn-xs btn-danger" value="Delete">-->
+                  <button class="btn btn-danger btn-xs">Delete</button>
+                </form>
+              <% } %>
+            
             </div>
           </div>
         <% }) %>
