--- a/YelpCamp/views/login.ejs
+++ b/YelpCamp/views/login.ejs
@@ -1,11 +1,22 @@
 <% include ./partials/header %>
 
-<h1>Login</h1>
-
-<form action="/login" method="POST">
-  <input type="text" name="username" placheholder="username">
-  <input type="password" name="password" placheholder="password">
-  <input type="submit" value="Login">
-</form>
+<div class="container">
+  <div class="row">
+    <h1>Login</h1>
+      <div style="width: 40%; margin: 25px auto;">
+        <form action="/login" method="POST">
+          <div class="form-group">
+            <input class="form-control" type="text" name="username" placheholder="username">
+          </div>
+          <div class="form-group">
+            <input class="form-control"  type="password" name="password" placheholder="password">
+          </div>
+          <div class="form-group">
+            <input class="btn btn-primary btn-block btn-lg" type="submit" value="Login">
+          </div>
+        </form>
+      </div>
+  </div>
+</div>
 
 <% include ./partials/footer %>
