--- a/YelpCamp/views/register.ejs
+++ b/YelpCamp/views/register.ejs
@@ -1,11 +1,22 @@
 <% include ./partials/header %>
 
-<h1>Sign Up</h1>
-
-<form action="/register" method="POST">
-  <input type="text" name="username" placheholder="username">
-  <input type="password" name="password" placheholder="password">
-  <button>Sign Up</button>
-</form>
+<div class="container">
+  <div class="row">
+    <h1>Sign Up</h1>
+      <div style="width: 40%; margin: 25px auto;">
+        <form action="/register" method="POST">
+          <div class="form-group">
+            <input class="form-control" type="text" name="username" placheholder="username">
+          </div>
+          <div class="form-group">
+            <input class="form-control" type="password" name="password" placheholder="password">
+          </div>
+          <div class="form-group">
+            <button class="btn btn-lg btn-primary btn-block">Sign Up</button>
+          </div>
+        </form>
+      </div>
+  </div>
+</div>
 
 <% include ./partials/footer %>
