Added CSS styles.

--- a/YelpCamp/views/campgrounds/new.ejs
+++ b/YelpCamp/views/campgrounds/new.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="row">
-    <h1 style="text-align: center; ">Create a New Campground</h1>
+    <h1 style="form-header">Create a New Campground</h1>
     <div style="width: 40%; margin: 25px auto;">
       <form action="/campgrounds" method="POST">
         <div class="form-group">
