--- a/YelpCamp/views/comments/edit.ejs
+++ b/YelpCamp/views/comments/edit.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="row">
-    <h1 style="text-align: center;">Edit Comment</h1>
+    <h1 style="form-header">Edit Comment</h1>
     <div style="width: 40%; margin: 25px auto;">
       <form action="/campgrounds/<%= campground_id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
         <div class="form-group">
