--- a/YelpCamp/views/comments/new.ejs
+++ b/YelpCamp/views/comments/new.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="row">
-    <h1 style="text-align: center;">Add a New Comment to <%= campground.name %></h1>
+    <h1 style="form-header">Add a New Comment to <%= campground.name %></h1>
     <div style="width: 40%; margin: 25px auto;">
       <form action="/campgrounds/<%= campground._id %>/comments" method="POST">
         <div class="form-group">
