--- a/YelpCamp/views/login.ejs
+++ b/YelpCamp/views/login.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="row">
-    <h1>Login</h1>
+    <h1 class="form-header">Login</h1>
       <div style="width: 40%; margin: 25px auto;">
         <form action="/login" method="POST">
           <div class="form-group">
