--- a/YelpCamp/views/register.ejs
+++ b/YelpCamp/views/register.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="row">
-    <h1>Sign Up</h1>
+    <h1 class="form-header">Register</h1>
       <div style="width: 40%; margin: 25px auto;">
         <form action="/register" method="POST">
           <div class="form-group">
@@ -12,7 +12,7 @@
             <input class="form-control" type="password" name="password" placheholder="password">
           </div>
           <div class="form-group">
-            <button class="btn btn-lg btn-primary btn-block">Sign Up</button>
+            <button class="btn btn-lg btn-primary btn-block">Register</button>
           </div>
         </form>
       </div>
