--- a/YelpCamp/views/campgrounds/new.ejs
+++ b/YelpCamp/views/campgrounds/new.ejs
@@ -2,12 +2,15 @@
 
 <div class="container">
   <div class="row">
-    <h1 style="form-header">Create a New Campground</h1>
+    <h1 class="form-header">Create a New Campground</h1>
     <div style="width: 40%; margin: 25px auto;">
       <form action="/campgrounds" method="POST">
         <div class="form-group">
           <input class="form-control" type="text" placeholder="campground name" name="name">
         </div>
+        <div class="form-group">
+          <input class="form-control" type="number" placeholder="campground price" name="price" min="0.01" step="0.01">
+        </div>       
         <div class="form-group">
           <input class="form-control" type="text" placeholder="image url" name="image">
         </div>
