--- a/YelpCamp/views/login.ejs
+++ b/YelpCamp/views/login.ejs
@@ -1,22 +1,21 @@
 <% include ./partials/header %>
 
-<div class="container">
-  <div class="row">
-    <h1 class="form-header">Login</h1>
-      <div style="width: 40%; margin: 25px auto;">
-        <form action="/login" method="POST">
-          <div class="form-group">
-            <input class="form-control" type="text" name="username" placheholder="username">
-          </div>
-          <div class="form-group">
-            <input class="form-control"  type="password" name="password" placheholder="password">
-          </div>
-          <div class="form-group">
-            <input class="btn btn-primary btn-block btn-lg" type="submit" value="Login">
-          </div>
-        </form>
-      </div>
-  </div>
+<div class="row">
+  <h1 class="form-header">Login</h1>
+    <div class="form-inputs">
+      <form action="/login" method="POST">
+        <div class="form-group">
+          <input class="form-control" type="text" name="username" placheholder="username">
+        </div>
+        <div class="form-group">
+          <input class="form-control"  type="password" name="password" placheholder="password">
+        </div>
+        <div class="form-group">
+          <input class="btn btn-primary btn-block btn-lg" type="submit" value="Login">
+        </div>
+      </form>
+      <a href="/campgrounds">Go to all campgrounds</a>
+    </div>
 </div>
 
 <% include ./partials/footer %>
