Created admin privileges.

--- a/YelpCamp/views/register.ejs
+++ b/YelpCamp/views/register.ejs
@@ -10,6 +10,10 @@
         <div class="form-group">
           <input class="form-control" type="password" name="password" placheholder="password">
         </div>
+        <!--input secret code for admin access-->
+        <div class="form-group">
+          <input class="form-control" type="text" name="adminCode" placheholder="Admin Code">
+        </div>
         <div class="form-group">
           <button class="btn btn-lg btn-primary btn-block">Register</button>
         </div>
