--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -21,7 +21,7 @@
           </p>
           <p><%= campground.description %></p>
           
-          <% if(currentUser && campground.author.id.equals(currentUser._id)) { %>
+          <% if(currentUser && campground.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin) { %>
             <a class="btn btn-warning btn-xs" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
             
             <form class="disp" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
@@ -43,7 +43,7 @@
               <span class="pull-right"><%= moment(campground.createdAt).fromNow() %></span>
               <p><%= comment.text %></p>
               
-              <% if(currentUser && comment.author.id.equals(currentUser._id)) { %>
+              <% if(currentUser && comment.author.id.equals(currentUser._id) || (currentUser && currentUser.isAdmin)) { %>
                 <a class="disp btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
                 
                 <form class="disp" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
