Added user profiles.

--- a/YelpCamp/views/register.ejs
+++ b/YelpCamp/views/register.ejs
@@ -5,14 +5,27 @@
     <div class="form-inputs">
       <form action="/register" method="POST">
         <div class="form-group">
-          <input class="form-control" type="text" name="username" placheholder="username">
+          <input class="form-control" type="text" name="username" placeholder="username">
         </div>
         <div class="form-group">
-          <input class="form-control" type="password" name="password" placheholder="password">
+          <input class="form-control" type="password" name="password" placeholder="password">
+        </div>        
+        <div class="form-group">
+          <input class="form-control" type="text" name="firstName" placeholder="John">
         </div>
+        <div class="form-group">
+          <input class="form-control" type="text" name="lastName" placeholder="Doe">
+        </div>
+        <div class="form-group">
+          <input class="form-control" type="text" name="avaar" placeholder="avatar url">
+        </div>
+        <div class="form-group">
+          <input class="form-control" type="email" name="email" placeholder="email">
+        </div>
+        
         <!--input secret code for admin access-->
         <div class="form-group">
-          <input class="form-control" type="text" name="adminCode" placheholder="Admin Code">
+          <input class="form-control" type="text" name="adminCode" placeholder="admin code (optional)">
         </div>
         <div class="form-group">
           <button class="btn btn-lg btn-primary btn-block">Register</button>
