--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -17,7 +17,7 @@
           <h4 class="pull-right">$<%= campground.price %>/night</h4>
           <h4><a><%= campground.name %></a></h4>
           <p>
-            <em>Submitted by <%= campground.author.username, moment(campground.createdAt).fromNow() %></em>
+            <em>Submitted by <a href="/users/<%= campground.author.id %>"><%= campground.author.username, moment(campground.createdAt).fromNow() %></a></em>
           </p>
           <p><%= campground.description %></p>
           
