--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -39,7 +39,7 @@
         <% campground.comments.forEach(function(comment) { %>
           <div class="row">
             <div class="col-md-12">
-              <strong><%= comment.author.username %></strong>
+              <strong><a href="/users/<%= comment.author.id %>"><%= comment.author.username %></a></strong>
               <span class="pull-right"><%= moment(campground.createdAt).fromNow() %></span>
               <p><%= comment.text %></p>
               
